@@ -1,4 +1,5 @@
-- Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan.
+- Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan. (Graham)
+- Split off a new class, MacroDefinitionBox, from MacroDialog to allow its re-use with Timed Macros. (Graham)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
